--- a/index.css
+++ b/index.css
@@ -490,7 +490,33 @@ body:not(.user-is-tabbing) a:focus {
 
 .work__image-box {
     margin-bottom: var(--gutter-normal);
+    transition: all .2s ease-in-out;
 }
+
+.work__image-box:hover {
+    /* animation: popup 1s 1;
+    animation-fill-mode: forwards; */
+    transform: scale(1.05);
+}
+
+/* .work__image-box:hover::after {
+    animation: popup 1s 1;
+    animation-fill-mode: backwards;
+} */
+
+@keyframes popup {
+    0%
+    {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);    
+    }
+    100%
+    {
+        transform: scale(1.5);
+        -webkit-transform: scale(1.5);
+    }
+}
+
 
 @media(min-width: 901px) {
     .work__image-box {
